--- a/src/sass/globals/_typography.scss
+++ b/src/sass/globals/_typography.scss
@@ -1,11 +1,11 @@
 @import url("//hello.myfonts.net/count/33f49f");
-$fontPath: "../assets/font" !default;
+$fontPath: "../assets/fonts" !default;
 
 /*
+  font-family: "NeuzeitOffice-Regular";
   font-family: "NeuzeitOffice-Bold";
   font-family: "NeuzeitOffice-BoldItalic";
   font-family: "NeuzeitOffice-Italic";
-  font-family: "NeuzeitOffice-Regular";
 */
 
 /* System Fonts */
