--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -27,7 +27,13 @@ body {
 
 
 
-
+.animated-page-wrapper {
+    position: absolute;
+    top: 62px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 
 
